Total users count fix, GetUsers fix for verified field, verified t1 count for GetUserByID (#165)
