# cmd/eskimo/api/swagger.json
@@ -783,6 +783,10 @@
                 "verified": {
                     "type": "boolean",
                     "example": true
+                },
+                "verifiedT1ReferralCount": {
+                    "type": "integer",
+                    "example": 100
                 }
             }
         },
@@ -1141,6 +1145,10 @@
                 "verified": {
                     "type": "boolean",
                     "example": true
+                },
+                "verifiedT1ReferralCount": {
+                    "type": "integer",
+                    "example": 100
                 }
             }
         }
